<resources>
    <string name="app_name">Peduli Pangan Seller</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="greeting_auth_page">Selamat datang di</string>
    <string name="text_login">Login</string>
    <string name="text_email">Masukkan Email</string>
    <string name="text_password">Masukkan Password</string>
    <string name="text_register">Daftar</string>
    <string name="text_auth_question_login">Belum punya akun?</string>
    <string name="text_name">Masukkan Nama Restoran</string>
    <string name="text_auth_question_register">Sudah punya akun?</string>
    <string name="pass_less_than_8_char">Password tidak boleh kurang dari 8 karakter</string>
    <string name="invalid_email">Email tidak valid</string>
    <string name="btn_text_ok">OK</string>
    <string name="const_messages">Teks pesan</string>
    <string name="field_empty_email">Kolom email harus diisi</string>
    <string name="field_empty_password">Kolom password harus diisi</string>
    <string name="field_empty_name">Kolom nama harus diisi</string>
    <string name="info_success_register">Pendaftaran akun seller berhasil, silahkan login dengan menggunakan email dan password yang sudah didaftarkan</string>
    <string name="add_product">Tambah produk</string>
    <string name="your_products">Produk Anda</string>
    <string name="restaurant_name">Restoran Sederhana</string>
    <string name="price_dummy">Rp15.0000</string>
    <string name="food_dummy">Nasi Goreng</string>
    <string name="description_product">Add Description</string>
    <string name="title_profile">Profile</string>
    <string name="error">Akun anda belum berhasil dibuat!\n</string>
    <string name="dummy_restaurant">Restoran Sederhana</string>
    <string name="dummy_email">restoransederhana@email.com</string>
    <string name="logout_profile">Logout</string>
    <string name="food_name">Masukkan Nama Makanan</string>
    <string name="price_food">Masukkan Harga</string>
    <string name="description_food">Masukkan Deskripsi Makanan</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Unggah</string>
    <string name="latitude_restaurant">Masukkan Latitude Lokasi</string>
    <string name="longitude_restaurant">Masukkan Longitude Lokasi</string>
    <string name="date_products">Masukkan Tanggal</string>
    <string name="longitude_restaurants">Masukkan Longitude</string>
    <string name="latitude_restaurants">Masukkan Latitude</string>
    <string name="product_detail">Nasi Goreng</string>
    <string name="product_detail_price">Rp 1.000.000</string>
    <string name="product_detail_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent fermentum porttitor orci, id faucibus magna. Etiam venenatis dictum nibh quis sollicitudin. Aenean dapibus sapien vitae faucibus sagittis. Curabitur consequat dolor quis molestie maximus. Phasellus vel lorem tortor. Donec pretium metus non nisi facilisis, at vulputate nunc laoreet. Aliquam dignissim rhoncus aliquet. Fusce ex purus, tincidunt eu viverra ut, volutpat nec felis.</string>
    <string name="delete_products">Delete Products</string>
    <string name="insert_restaurant_name">Masukkan Nama Restoran</string>
    <string name="required_fields">Semua kolom harus diisi</string>
    <string name="successfully_uploaded">Produk berhasil diunggah</string>
    <string name="failed_upload">Gagal mengunggah produk. Silahkan coba lagi</string>
</resources>